# crm_dashboard

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: main_dev-swnl-crm.yml  main_swnl-crm.yml
app/: deps.py  main.py
app/core/: chat.py  config.py  db.py
app/models/: __init__.py  api.py  auth.py  bizcard.py  dashboard.py  enum.py  program.py  prompt.py
app/modules/: blob.py  llm.py
app/routers/: __init__.py  bizcards.py  dashboard.py  program.py  user.py
frontend/: index.html
frontend/src/: main.tsx  routeTree.gen.ts
frontend/src/client/: sdk.gen.ts  types.gen.ts
frontend/src/components/Common/: SidebarItems.tsx
frontend/src/components/Drawer/: CheckClientDrawer.tsx  ModifyProjectDrawer.tsx
frontend/src/components/Modal/: CreateProjectModal.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/routes/: login.tsx  signup.tsx
frontend/src/routes/_layout/: biz.tsx  dashboard.tsx  index.tsx
